// Auto-generated Protocol Buffer schema
// Generated at: 2025-09-07T16:10:43.781Z
// Source: JSON configuration structure

syntax = "proto3";

package codeuchain;

message Preferences {
  // dark
  string theme = 1;
  bool notifications = 2;
  // en
  string language = 3;
}

message UsersItem {
  int64 id = 1;
  // User 0
  string name = 2;
  // user0@example.com
  string email = 3;
  // admin
  string role = 4;
  Preferences preferences = 5;
}

message Metadata {
  // 2025-09-07T16:10:43.775Z
  string generated = 1;
  // 2.0.0
  string version = 2;
}

message quickmedium {
  // Medium User Dataset
  string name = 1;
  int64 totalUsers = 2;
  repeated UsersItem users = 3;
  Metadata metadata = 4;
}