// Auto-generated Protocol Buffer schema
// Generated at: 2025-09-07T16:10:43.777Z
// Source: JSON configuration structure

syntax = "proto3";

package codeuchain;

message Settings {
  // dark
  string theme = 1;
  // en
  string language = 2;
  bool notifications = 3;
}

message Api {
  // https://api.example.com
  string baseUrl = 1;
  int64 timeout = 2;
  int64 retries = 3;
}

message quicksmall {
  // Small Config
  string name = 1;
  // 1.0.0
  string version = 2;
  Settings settings = 3;
  Api api = 4;
}